added db password and username
* not sure if this is correcgt fix but it is missing

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,8 @@ test:
 production:
   <<: *default
   database: cipher_movies_production
+  username: cipher_movies
+  password: <%= ENV['CIPHER_MOVIES_DATABASE_PASSWORD'] %>
 
 
 ######################################################################
